--- a/static/stylesheets/app.css
+++ b/static/stylesheets/app.css
@@ -125,7 +125,7 @@
 	
 	strong { font-weight: 600; }
 	
-	pre { font-size: 1.14285714em; }
+	pre { font-size: 0.85714286em; color: #222; }
 	
 	
 	/* Lists ---------------------- */
@@ -924,19 +924,58 @@
 	.documentation-nav li { margin-bottom: 1em; }
 	.documentation-nav li li { margin-bottom: 0; }
 	
-	.documentation-nav li a { padding-left: 25px; display: inline-block; }
+	.documentation-nav li a { padding-left: 25px; display: inline-block;  }
 	
 	
 
 
 	.documentation-nav li.active a { color: #fff; }
 	
-/*	.passage { font-size: 0.875em; }*/
+	.passage p,
+	.passage ul,
+	.passage ol { font-size: 1em; }
+	
+	.passage h3 + h4 { margin-top: 0.6667em; }
+	
+	.passage .tabs-content { clear: both; }
+	
+	.passage .tabs.pill { margin-bottom: 1em; height: auto; float: left; }
+	
+	.passage .tabs.pill dd { margin-right: 4px; margin-bottom: 4px; font-size: 0.85714286em;  }
+	.passage .tabs.pill dd a { padding: 0 1em; text-decoration: none; /*background: #f3f3f3;*/ }
+	
+	.passage .tabs.pill dd a:hover { color: #222; }
+	
+	.passage .tabs.pill dd.active a { 
+		background: #b00f0f; /* Old browsers */
+		background: -moz-linear-gradient(top, #b00f0f 0%, #920c0c 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b00f0f), color-stop(100%,#920c0c)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* IE10+ */
+		background: linear-gradient(to bottom, #b00f0f 0%,#920c0c 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b00f0f', endColorstr='#920c0c',GradientType=0 ); /* IE6-9 */
+		 }
+		 
+	.passage .tabs.pill dd.active a:hover { 
+		color: #fff;
+		background: #970000; /* Old browsers */
+		background: -moz-linear-gradient(top, #970000 0%, #750000 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#970000), color-stop(100%,#750000)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, #970000 0%,#750000 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, #970000 0%,#750000 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top, #970000 0%,#750000 100%); /* IE10+ */
+		background: linear-gradient(to bottom, #970000 0%,#750000 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#970000', endColorstr='#750000',GradientType=0 ); /* IE6-9 */ }	 
+		 
+	
+	
+	td ul { margin-bottom: 0; }
 	
 	.passage p + ul { margin-top: -1em; margin-left: 20px; }
 	.passage p + ul.definition { margin-left: 0; }
 	
-	.passage p + code { margin-top: -1.71428571em; }
+	/*.passage p + code { margin-top: -1.71428571em; }*/
 	
 	code { 
 		background: #f3f3f3; width: 100%; float: left; padding: 16px; margin-bottom: 1.71428571em; font-size: 1em; line-height: 1.5;
@@ -989,7 +1028,7 @@
 		.documentation-nav.nav-bar.vertical > li { 
 			display: block !important; background: none; border: none; float: left; width: 100%;	}
 			
-		.documentation-nav li a { color: #222; background: none; }
+		.documentation-nav li a { color: #222; background: none;  }
 		.documentation-nav ul.flyout li a { background: none; border: none; box-shadow: none; padding: 0 30px; line-height: 1.5; }	
 		.documentation-nav ul.flyout li.active, .nav-bar li ul li.active { border: none; }	}
 	
@@ -1005,8 +1044,8 @@
 ----------------------------------------- */
 
 	table { 
-		border: 1px solid #dadada; border-collapse: collapse; margin-bottom: 1.71428571em; float: left;  }
-	table tbody tr td, table thead tr th { padding: 10px; text-align: left; vertical-align: top;  border: 1px solid #dadada; }
+		border: 1px solid #dadada; border-collapse: collapse; margin-bottom: 1.71428571em;  width: 100%; }
+	table tbody tr td, table thead tr th { padding: 6px 10px ; text-align: left; vertical-align: top;  border: 1px solid #dadada; }
 	table thead tr th { font-weight: 600; }
 
 
